--- a/calculadora.html
+++ b/calculadora.html
@@ -7,7 +7,48 @@
 </head>
 <style>
     * {
-        
+        margin: 0;
+        padding: 0;
+    }
+    .fundo{
+        background-image: linear-gradient(45deg, #f3ec78, #af4261);
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        height: 100vh;
+        text-align: center;
+    }
+    .calculadora {
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.5);
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        border-radius: 15px;
+        padding: 15px;
+    }
+    .buttons{
+        width: 50px;
+        height: 50px;
+        background-color: #f3ec78;
+        color: black;
+        border: none;
+        border-radius: 5px;
+        margin: 5px;
+        font-size: 20px;
+        cursor: pointer;
+    }
+    .buttons:hover{
+        background-color: #af4261;
+        color: white;
+    }
+    #resultado {
+        width: 237px;
+        background-color: white;
+        height: 30px;
+        margin: 5px;
+        font-size: 25px;
+        color: black;
+        text-align: right;
     }
 </style>
 <body>
@@ -15,35 +56,35 @@
         <h1>Thales Euflauzino</h1>
         <div class="calculadora">
             <h1>Calculadora</h1>
-            <p id="resultado"> </p>
+            <p id="resultado">aqui</p>
             <table>
                 <tr>
-                    <td><button>C</button></td>
-                    <td><button><</button></td>
-                    <td><button>/</button></td>
-                    <td><button>*</button></td>
+                    <td><button class="buttons">C</button></td>
+                    <td><button class="buttons"><</button></td>
+                    <td><button class="buttons">/</button></td>
+                    <td><button class="buttons">*</button></td>
                 </tr>
                 <tr>
-                    <td><button>7</button></td>
-                    <td><button>8</button></td>
-                    <td><button>9</button></td>
-                    <td><button>-</button></td>
+                    <td><button class="buttons">7</button></td>
+                    <td><button class="buttons">8</button></td>
+                    <td><button class="buttons">9</button></td>
+                    <td><button class="buttons">-</button></td>
                 </tr>
                 <tr>
-                    <td><button>4</button></td>
-                    <td><button>5</button></td>
-                    <td><button>6</button></td>
-                    <td><button>+</button></td>
+                    <td><button class="buttons">4</button></td>
+                    <td><button class="buttons">5</button></td>
+                    <td><button class="buttons">6</button></td>
+                    <td><button class="buttons">+</button></td>
                 </tr>
                 <tr>
-                    <td><button>1</button></td>
-                    <td><button>2</button></td>
-                    <td><button>3</button></td>
-                    <td rowspan="2"><button>=</button></td>
+                    <td><button class="buttons">1</button></td>
+                    <td><button class="buttons">2</button></td>
+                    <td><button class="buttons">3</button></td>
+                    <td rowspan="2"><button class="buttons"  style="height: 106px;"> =</button></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><button>0</button></td>
-                    <td><button>.</button></td>
+                    <td colspan="2"><button class="buttons"  style="width: 106px;">0</button></td>
+                    <td><button class="buttons">.</button></td>
                 </tr>
             </table>
         </div>
