--- a/calculadora.html
+++ b/calculadora.html
@@ -56,38 +56,61 @@
         <h1>Thales Euflauzino</h1>
         <div class="calculadora">
             <h1>Calculadora</h1>
-            <p id="resultado">aqui</p>
+            <p id="resultado"></p>
             <table>
                 <tr>
-                    <td><button class="buttons">C</button></td>
-                    <td><button class="buttons"><</button></td>
-                    <td><button class="buttons">/</button></td>
-                    <td><button class="buttons">*</button></td>
+                    <td><button class="buttons" onclick="limpar()">C</button></td>
+                    <td><button class="buttons" onclick="back()"><</button></td>
+                    <td><button class="buttons" onclick="insert('/')">/</button></td>
+                    <td><button class="buttons" onclick="insert('*')">*</button></td>
                 </tr>
                 <tr>
-                    <td><button class="buttons">7</button></td>
-                    <td><button class="buttons">8</button></td>
-                    <td><button class="buttons">9</button></td>
-                    <td><button class="buttons">-</button></td>
+                    <td><button class="buttons" onclick="insert('7')">7</button></td>
+                    <td><button class="buttons" onclick="insert('8')">8</button></td>
+                    <td><button class="buttons" onclick="insert('9')">9</button></td>
+                    <td><button class="buttons" onclick="insert('-')">-</button></td>
                 </tr>
                 <tr>
-                    <td><button class="buttons">4</button></td>
-                    <td><button class="buttons">5</button></td>
-                    <td><button class="buttons">6</button></td>
-                    <td><button class="buttons">+</button></td>
+                    <td><button class="buttons" onclick="insert('4')">4</button></td>
+                    <td><button class="buttons" onclick="insert('5')">5</button></td>
+                    <td><button class="buttons" onclick="insert('6')">6</button></td>
+                    <td><button class="buttons" onclick="insert('+')">+</button></td>
                 </tr>
                 <tr>
-                    <td><button class="buttons">1</button></td>
-                    <td><button class="buttons">2</button></td>
-                    <td><button class="buttons">3</button></td>
-                    <td rowspan="2"><button class="buttons"  style="height: 106px;"> =</button></td>
+                    <td><button class="buttons" onclick="insert('1')">1</button></td>
+                    <td><button class="buttons" onclick="insert('2')">2</button></td>
+                    <td><button class="buttons" onclick="insert('3')">3</button></td>
+                    <td rowspan="2"><button class="buttons"  style="height: 106px;" onclick="calcular()">=</button></td>
                 </tr>
                 <tr>
-                    <td colspan="2"><button class="buttons"  style="width: 106px;">0</button></td>
-                    <td><button class="buttons">.</button></td>
+                    <td colspan="2"><button class="buttons"  style="width: 106px;" onclick="insert('0')">0</button></td>
+                    <td><button class="buttons" onclick="insert('.')"></button>.</button></td>
                 </tr>
             </table>
         </div>
     </div>
+    <script>
+        function insert(number) {
+            var num = document.getElementById("resultado").innerHTML;
+            document.getElementById("resultado").innerHTML = num + number;
+            
+        }
+        function limpar() {
+            document.getElementById("resultado").innerHTML = "";
+        }
+        function back(){
+            var resultado = document.getElementById("resultado").innerHTML;
+            document.getElementById("resultado").innerHTML = num.substring(0, resultado.length - 1);
+        }
+        function calcular(){
+            var entrada = document.getElementById("resultado").innerHTML;
+            if(entrada){
+                document.getElementById("resultado").innerHTML = eval(entrada);
+            }
+            else{
+                document.getElementById("resultado").innerHTML = "Erro.";
+            }
+        }
+    </script>
 </body>
 </html>
