--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
     <link rel="stylesheet" href="text/css"  href="style.css"/>
+    <script src="script.js"></script>
 </head>
 <body>
     <div class="fundo">
@@ -44,28 +45,5 @@
             </table>
         </div>
     </div>
-    <script>
-        function insert(number) {
-            var num = document.getElementById("resultado").innerHTML;
-            document.getElementById("resultado").innerHTML = num + number;
-            
-        }
-        function limpar() {
-            document.getElementById("resultado").innerHTML = "";
-        }
-        function back(){
-            var resultado = document.getElementById("resultado").innerHTML;
-            document.getElementById("resultado").innerHTML = num.substring(0, resultado.length - 1);
-        }
-        function calcular(){
-            var entrada = document.getElementById("resultado").innerHTML;
-            if(entrada){
-                document.getElementById("resultado").innerHTML = eval(entrada);
-            }
-            else{
-                document.getElementById("resultado").innerHTML = "Erro.";
-            }
-        }
-    </script>
 </body>
 </html>
