--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
-    <link rel="stylesheet" href="text/css"  href="style.css"/>
-    <script src="script.js"></script>
+    <link rel="stylesheet"  href="src/css/style.css"/>
+    <script src="src/js/scripts.js"></script>
 </head>
 <body>
     <div class="fundo">
