fixing '.' was not centered

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </tr>
                 <tr>
                     <td colspan="2"><button class="buttons"  style="width: 106px;" onclick="insert('0')">0</button></td>
-                    <td><button class="buttons" onclick="insert('.')"></button>.</button></td>
+                    <td><button class="buttons" onclick="insert('.')">.</button></td>
                 </tr>
             </table>
         </div>
